[package]
name = "orbtk-book"
version = "0.0.2"
authors = [
	"Florian Blasius <flovanpt@posteo.de>",
	"Ralf Zerres <ralf.zerres.de@gmail.com>"
]
description = "The Orbital Widget Toolkit"
edition = "2018"

[[bin]]
name = "concat_chapters"
path = "tools/src/bin/concat_chapters.rs"

[[bin]]
name = "convert_quotes"
path = "tools/src/bin/convert_quotes.rs"

[[bin]]
name = "lfp"
path = "tools/src/bin/lfp.rs"

[[bin]]
name = "link2print"
path = "tools/src/bin/link2print.rs"

[[bin]]
name = "release_listings"
path = "tools/src/bin/release_listings.rs"

[[bin]]
name = "remove_hidden_lines"
path = "tools/src/bin/remove_hidden_lines.rs"

[[bin]]
name = "remove_links"
path = "tools/src/bin/remove_links.rs"

[[bin]]
name = "remove_markup"
path = "tools/src/bin/remove_markup.rs"

[dependencies]
docopt = "1.1.0"
flate2 = "1.0.13"
lazy_static = "1.4.0"
regex = "1.3.3"
serde = "1.0"
tar = "0.4.26"
walkdir = "2.3.1"

[build-dependencies]
cargo-readme = "3.2.0"